--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -11,34 +11,34 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   services:
-  #     postgres:
-  #       image: postgres:11-alpine
-  #       ports:
-  #         - "5432:5432"
-  #       env:
-  #         POSTGRES_DB: rails_test
-  #         POSTGRES_USER: rails
-  #         POSTGRES_PASSWORD: password
-  #   env:
-  #     RAILS_ENV: test
-  #     DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-  #     # Add or replace dependency steps here
-  #     - name: Install Ruby and gems
-  #       uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
-  #       with:
-  #         bundler-cache: true
-  #     # Add or replace database setup steps here
-  #     - name: Set up database schema
-  #       run: bin/rails db:schema:load
-  #     # Add or replace test runners here
-  #     - name: Run tests
-  #       run: bin/rake
+  RSpec:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:11-alpine
+        ports:
+          - "5432:5432"
+        env:
+          POSTGRES_DB: rails_test
+          POSTGRES_USER: rails
+          POSTGRES_PASSWORD: password
+    env:
+      RAILS_ENV: test
+      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      # Add or replace dependency steps here
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      # Add or replace database setup steps here
+      - name: Set up database schema
+        run: bin/rails db:schema:load
+      # Add or replace test runners here
+      - name: Run tests
+        run: bundle exec rspec
 
   Linters:
     runs-on: ubuntu-latest
@@ -50,5 +50,6 @@ jobs:
         with:
           bundler-cache: true
       # Add or replace any other lints here
-      - name: Lint Ruby files
+      - name: Rubocop
         run: bundle exec rubocop --parallel
+
