--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,8 @@ test:
 #
 production:
   <<: *default
-  database: test_app_production
-  username: test_app
-  password: <%= ENV["TEST_APP_DATABASE_PASSWORD"] %>
+  database: <%= Rails.application.credentials[:db][:name] %>
+  host: <%= Rails.application.credentials[:db][:host] %>
+  port: <%= Rails.application.credentials[:db][:port] %>
+  username: <%= Rails.application.credentials[:db][:username] %>
+  password: <%= Rails.application.credentials[:db][:password] %>
